--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Space Battle</title>
+  <title>Space Battle | Phaser 3</title>
   <script src="js/phaser.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/scenes/sceneLoad.js"></script>
