Updated the rules

--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
       </ul>
       <h4>Controls:</h4>
       <ul>
-        <li>Left Click: Moves the ship to where you click</li>
-        <li>W: Fire lasers</li>
+        <li><b>Arrow keys</b>: Moves the Player Ship</li>
+        <li><b>C</b>: Fire lasers</li>
       </ul>
       <h4>Mechanics:</h4>
       <ul>
-        <li>The asteroids randomly spawn and damage both your ship and the Mothership upon collision.</li>
-        <li>When you successfully hit the Mothership, it will lunge towards you until your next move.</li>
-        <li>As the Mothership's HP gets lower, it also becomes harder to combat.</li>
+        <li><b>Asteroids</b> randomly spawn and damage both your ship and the Mothership upon collision.</li>
+        <li><b>Stars</b> heal your ship, but it can be destroyed by asteroids and bullets.</li>
       </ul>
       <h4>Credits:</h4>
       <ul>
