Changed rules and fixed star bug

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </ul>
       <h4>Mechanics:</h4>
       <ul>
-        <li><b>Asteroids</b> randomly spawn and damage both your ship and the Mothership upon collision.</li>
+        <li><b>Asteroids</b> deal 1 damage. They randomly spawn and damage both your ship and the Mothership upon
+          collision.</li>
+        <li><b>Lasers</b> from the Mothership deal 2 damage.</li>
         <li><b>Stars</b> heal your ship, but it can be destroyed by asteroids and bullets.</li>
       </ul>
       <h4>Credits:</h4>
