--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <ul>
         <li><b>Arrow keys</b>: Moves the Player Ship</li>
         <li><b>C</b>: Fire lasers</li>
+        <li><b>Z</b>: Use speed boost</li>
       </ul>
       <h4>Mechanics:</h4>
       <ul>
