Renamed files and added helpful comments

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <script src="js/constants.js"></script>
 
   <!-- Controller and Model -->
-  <script src="js/model/model.js"></script>
-  <script src="js/controller/controller.js"></script>
+  <script src="js/model/Model.js"></script>
+  <script src="js/controller/Controller.js"></script>
 
   <!-- Components -->
   <script src="js/components/Bar.js"></script>
-  <script src="js/components/scoreBox.js"></script>
+  <script src="js/components/ScoreBox.js"></script>
   <script src="js/components/FlatButton.js"></script>
-  <script src="js/components/toggleButton.js"></script>
-  <script src="js/components/soundButtons.js"></script>
+  <script src="js/components/ToggleButton.js"></script>
+  <script src="js/components/SoundButtons.js"></script>
 
   <!-- Scenes -->
   <script src="js/scenes/SceneLoad.js"></script>
