Changed the rules log

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <h4>Controls:</h4>
       <ul>
         <li><b>Arrow keys</b>: Moves the Player Ship</li>
+        <li><b>Z</b>: Use turbo battery</li>
         <li><b>C</b>: Fire lasers</li>
-        <li><b>Z</b>: Use speed boost</li>
       </ul>
       <h4>Mechanics:</h4>
       <ul>
@@ -71,6 +71,8 @@
           collision.</li>
         <li><b>Lasers</b> from the Mothership deal 2 damage.</li>
         <li><b>Stars</b> heal your ship, but it can be destroyed by asteroids and bullets.</li>
+        <li><b>Batteries</b> speed up your ship by 100.</li>
+        <li><b>Shields</b> make you immune to damage for 10 seconds.</li>
       </ul>
       <h4>Credits:</h4>
       <ul>
