Added sound effects, ship attacks, meteor edit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- Components -->
     <script src="js/components/Bar.js"></script>
+    <script src="js/components/HealthBar.js"></script>
     <script src="js/components/ScoreBox.js"></script>
     <script src="js/components/FlatButton.js"></script>
     <script src="js/components/ToggleButton.js"></script>
