--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="js/utils/align.js"></script>
   <script src="js/utils/collision.js"></script>
   <script src="js/utils/mediaManager.js"></script>
+  <script src="js/utils/Physics.js"></script>
 </head>
 
 <body>
