Added level scene

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <script src="js/scenes/TitleScene.js"></script>
   <script src="js/scenes/HowToScene.js"></script>
   <script src="js/scenes/AboutScene.js"></script>
+  <script src="js/scenes/LevelInfoScene.js"></script>
   <script src="js/scenes/MainScene.js"></script>
   <script src="js/scenes/GameOverScene.js"></script>
 
